<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.hzvoznired.hzvoznired.SelectServiceActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vozniRed"
        android:id="@+id/vozniRedButton"
        android:onClick="vozniRedMethod"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gdjeJeVlak"
        android:id="@+id/gdjeJeVlakButton"
        android:onClick="gdjeJeVlakMethod"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poKolodvorima"
        android:id="@+id/poKolodvorimaButton"
        android:onClick="poKolodvorimaButtonMethod"
        android:layout_gravity="center_horizontal" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/whereistrain"
                android:background="@drawable/oval_button_shape"
                android:scaleType="fitXY"
                android:id="@+id/btn_whereistrain"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="whereIsTrain"/>

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/trainscheudle"
                android:background="@drawable/oval_button_shape"
                android:scaleType="fitXY"
                android:id="@+id/btn_trainscheudle"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:onClick="trainScheudle"/>


            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/trainstations"
                android:background="@drawable/oval_button_shape"
                android:scaleType="fitXY"
                android:id="@+id/btn_trainstations"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:onClick="trainStations"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
